# proyecto-programacion

./: .gdb_history  .gitignore  CMakeLists.txt  busqueda.c  busqueda.h  config.gp  config_act.gp  config_centro.gp  dataset_muestra.csv  generar_reader.c  graficas.c  graficas.h  gui.c  gui.h  main.c  nuklear_sdl_gl3.h  ordenar.c  ordenar.h  reader.c  reader.h  utilidades.c  utilidades.h  windows-toolchain.cmake
build-win/gnuplot/: NEWS  README-Windows.txt  RELEASE_NOTES
build-win/gnuplot/docs/: README
build-win/gnuplot/etc/fonts/conf.d/: README
build-win/gnuplot/share/texmf/tex/generic/gnuplot/: gnuplot-lua-tikz-common.tex
build-win/gnuplot/share/texmf/tex/latex/gnuplot/: gnuplot-lua-tikz.sty
include/glad/: glad.h
src/: glad.c
